RaylibSharp/Raylib.cs

using System;
using System.Numerics;
using System.Runtime.InteropServices;
using Matrix = System.Numerics.Matrix4x4;

namespace RaylibSharp {
	// Color type, RGBA (32bit)
	[StructLayout(LayoutKind.Sequential)]
	public struct Color {
		public static readonly Color White = new Color(255, 255, 255);
		public static readonly Color Red = new Color(255, 0, 0);
		public static readonly Color Green = new Color(0, 255, 0);
		public static readonly Color Blue = new Color(0, 0, 255);

		public byte r;
		public byte g;
		public byte b;
		public byte a;

		public Color(byte r, byte g, byte b, byte a) {
			this.r = r;
			this.g = g;
			this.b = b;
			this.a = a;
		}

		public Color(byte r, byte g, byte b) : this(r, g, b, 255) {
		}

		public Color(Vector4 Clr) : this((byte)(Clr.X * 255), (byte)(Clr.Y * 255), (byte)(Clr.Z * 255), (byte)(Clr.W * 255)) {
		}

		public Color(float RGB) : this(new Vector4(RGB, RGB, RGB, 1)) {
		}

		public void ToFloat(out Vector4 Clr) {
			Clr = new Vector4(r / 255.0f, g / 255.0f, b / 255.0f, a / 255.0f);
		}

		public override string ToString() {
			return string.Format("({0}, {1}, {2}, {3})", r, g, b, a);
		}

		public static Color operator *(Color A, Color B) {
			A.ToFloat(out Vector4 AFloat);
			B.ToFloat(out Vector4 BFloat);
			return new Color(AFloat * BFloat);
		}

		public static Color operator +(Color A, Color B) {
			A.ToFloat(out Vector4 AFloat);
			B.ToFloat(out Vector4 BFloat);
			return new Color(AFloat + BFloat);
		}
	}

	// Rectangle type
	[StructLayout(LayoutKind.Sequential)]
	public struct Rectangle {
		public float x;
		public float y;
		public float width;
		public float height;

		public Rectangle(float x, float y, float w, float h) {
			this.x = x;
			this.y = y;
			this.width = w;
			this.height = h;
		}
	}

	// Image type, bpp always RGBA (32bit)
	// NOTE: Data stored in CPU memory (RAM)
	[StructLayout(LayoutKind.Sequential)]
	public struct Image {
		public IntPtr data;             // Image raw data
		public int width;              // Image base width
		public int height;             // Image base height
		public int mipmaps;            // Mipmap levels, 1 by default
		public int format;             // Data format (PixelFormat type)
	}

	// Texture2D type
	// NOTE: Data stored in GPU memory
	[StructLayout(LayoutKind.Sequential)]
	public struct Texture2D {
		public uint id;        // OpenGL texture id
		public int width;              // Texture base width
		public int height;             // Texture base height
		public int mipmaps;            // Mipmap levels, 1 by default
		public int format;             // Data format (PixelFormat type)
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct Texture {
		public Texture2D tex;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct TextureCubemap {
		public Texture2D tex;
	}

	// RenderTexture2D type, for texture rendering
	[StructLayout(LayoutKind.Sequential)]
	public struct RenderTexture2D {
		public uint id;        // OpenGL Framebuffer Object (FBO) id
		public Texture2D texture;      // Color buffer attachment texture
		public Texture2D depth;        // Depth buffer attachment texture
		public bool depthTexture;      // Track if depth attachment is a texture or renderbuffer
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct RenderTexture {
		public RenderTexture2D tex;
	}

	// N-Patch layout info
	[StructLayout(LayoutKind.Sequential)]
	public struct NPatchInfo {
		public Rectangle sourceRec;   // Region in the texture
		public int left;              // left border offset
		public int top;               // top border offset
		public int right;             // right border offset
		public int bottom;            // bottom border offset
		public int type;              // layout of the n-patch: 3x3, 1x3 or 3x1
	}

	// Font character info
	[StructLayout(LayoutKind.Sequential)]
	public struct CharInfo {
		public int value;              // Character value (Unicode)
		public int offsetX;            // Character offset X when drawing
		public int offsetY;            // Character offset Y when drawing
		public int advanceX;           // Character advance position X
		public Image image;            // Character image data
	}

	// Font type, includes texture and charSet array data
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct Font {
		public int baseSize;           // Base size (default chars height)
		public int charsCount;         // Number of characters
		public Texture2D texture;      // Characters texture atlas
		public Rectangle* recs;        // Characters rectangles in texture
		public CharInfo* chars;        // Characters info data
	}

	// Camera type, defines a camera position/orientation in 3d space
	[StructLayout(LayoutKind.Sequential)]
	public struct Camera3D {
		public Vector3 position;       // Camera position
		public Vector3 target;         // Camera target it looks-at
		public Vector3 up;             // Camera up vector (rotation over its axis)
		public float fovy;             // Camera field-of-view apperture in Y (degrees) in perspective, used as near plane width in orthographic
		public int type;               // Camera type, defines projection type: CAMERA_PERSPECTIVE or CAMERA_ORTHOGRAPHIC

		public Camera3D(Vector3 position, Vector3 target, Vector3 up, float fovy = 90, CameraType type = CameraType.CAMERA_PERSPECTIVE) {
			this.position = position;       // Camera position
			this.target = target;         // Camera target it looks-at
			this.up = up;             // Camera up vector (rotation over its axis)
			this.fovy = fovy;             // Camera field-of-view apperture in Y (degrees) in perspective, used as near plane width in orthographic
			this.type = (int)type;               // Camera type, defines projection type: CAMERA_PERSPECTIVE or CAMERA_ORTHOGRAPHIC
		}
	}

	// Camera2D type, defines a 2d camera
	[StructLayout(LayoutKind.Sequential)]
	public struct Camera2D {
		public Vector2 offset;         // Camera offset (displacement from target)
		public Vector2 target;         // Camera target (rotation and zoom origin)
		public float rotation;         // Camera rotation in degrees
		public float zoom;             // Camera zoom (scaling), should be 1.0f by default
	}

	// Vertex data definning a mesh
	// NOTE: Data stored in CPU memory (and GPU)
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct Mesh {
		public int vertexCount;        // Number of vertices stored in arrays
		public int triangleCount;      // Number of triangles stored (indexed or not)

		// Default vertex data
		public float* vertices;        // Vertex position (XYZ - 3 components per vertex) (shader-location = 0)
		public float* texcoords;       // Vertex texture coordinates (UV - 2 components per vertex) (shader-location = 1)
		public float* texcoords2;      // Vertex second texture coordinates (useful for lightmaps) (shader-location = 5)
		public float* normals;         // Vertex normals (XYZ - 3 components per vertex) (shader-location = 2)
		public float* tangents;        // Vertex tangents (XYZW - 4 components per vertex) (shader-location = 4)
		public byte* colors;  // Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)
		public ushort* indices;// Vertex indices (in case vertex data comes indexed)

		// Animation vertex data
		public float* animVertices;    // Animated vertex positions (after bones transformations)
		public float* animNormals;     // Animated normals (after bones transformations)
		public int* boneIds;           // Vertex bone ids, up to 4 bones influence by vertex (skinning)
		public float* boneWeights;     // Vertex bone weight, up to 4 bones influence by vertex (skinning)

		// OpenGL identifiers
		public uint vaoId;     // OpenGL Vertex Array Object id
		public uint* vboId;    // OpenGL Vertex Buffer Objects id (default vertex data)
	}

	// Shader type (generic)
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct Shader {
		public uint id;        // Shader program id
		public int* locs;              // Shader locations array (MAX_SHADER_LOCATIONS)
	}

	// Material texture map
	[StructLayout(LayoutKind.Sequential)]
	public struct MaterialMap {
		public Texture2D texture;      // Material map texture
		public Color color;            // Material map color
		public float value;            // Material map value
	}

	// Material type (generic)
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct Material {
		public Shader shader;          // Material shader
		public MaterialMap* maps;      // Material maps array (MAX_MATERIAL_MAPS)
		public float* params_;          // Material generic parameters (if required)
	}

	// Transformation properties
	[StructLayout(LayoutKind.Sequential)]
	public struct Transform {
		public Vector3 translation;    // Translation
		public Quaternion rotation;    // Rotation
		public Vector3 scale;          // Scale
	}

	// Bone information
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct BoneInfo {
		public fixed byte name[32];          // Bone name
		public int parent;             // Bone parent
	}

	// Model type
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct Model {
		public Matrix transform;       // Local transform matrix

		public int meshCount;          // Number of meshes
		public Mesh* meshes;           // Meshes array

		public int materialCount;      // Number of materials
		public Material* materials;    // Materials array
		public int* meshMaterial;      // Mesh material number

		// Animation data
		public int boneCount;          // Number of bones
		public BoneInfo* bones;        // Bones information (skeleton)
		public Transform* bindPose;    // Bones base transformation (pose)
	}

	// Model animation
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct ModelAnimation {
		public int boneCount;          // Number of bones
		public BoneInfo* bones;        // Bones information (skeleton)

		public int frameCount;         // Number of animation frames
		public Transform** framePoses; // Poses array by frame
	}

	// Ray type (useful for raycast)
	[StructLayout(LayoutKind.Sequential)]
	public struct Ray {
		public Vector3 position;       // Ray position (origin)
		public Vector3 direction;      // Ray direction
	}

	// Raycast hit information
	[StructLayout(LayoutKind.Sequential)]
	public struct RayHitInfo {
		public bool hit;               // Did the ray hit something?
		public float distance;         // Distance to nearest hit
		public Vector3 position;       // Position of nearest hit
		public Vector3 normal;         // Surface normal of hit
	}

	// Bounding box type
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundingBox {
		public Vector3 min;            // Minimum vertex box-corner
		public Vector3 max;            // Maximum vertex box-corner
	}

	// Wave type, defines audio wave data
	[StructLayout(LayoutKind.Sequential)]
	public struct Wave {
		public uint sampleCount;       // Total number of samples
		public uint sampleRate;        // Frequency (samples per second)
		public uint sampleSize;        // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
		public uint channels;          // Number of channels (1-mono, 2-stereo)
		public IntPtr data;                     // Buffer data pointer
	}

	//typedef public struct rAudioBuffer rAudioBuffer;

	// Audio stream type
	// NOTE: Useful to create custom audio streams not bound to a specific file
	[StructLayout(LayoutKind.Sequential)]
	unsafe public struct AudioStream {
		public uint sampleRate;        // Frequency (samples per second)
		public uint sampleSize;        // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
		public uint channels;          // Number of channels (1-mono, 2-stereo)

		// rAudioBuffer*
		public IntPtr buffer;           // Pointer to internal data used by the audio system
	}
